# 08-jeu-de-la-vie-public

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: GameOfLife.cpp  GameOfLife.hpp  GridLib.hpp  display.cpp  display.h
